--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
 Hello World!
+<Doctype html>
+    <html>
+        <head>
+            <title> CSCE 190: Abhinav Myadala</title>
+        </head>
+        <body>
+            <h1> Abhinav Myadala's CSCE 190 Site </h1>
+        </body>
+    </html>
