--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@ Hello World!
             <h1> Abhinav Myadala's CSCE 190 Site </h1>
 
             <section class="assignment">
-                <a href="files/problemstatement.pdf"><img src="images/problemstatement.png"></a>
+                <a href="files/problem-statement.pdf"><img src="images/problemstatement.png"></a>
                 <section class="ass-details">
-                    <a href="files/problemstatement.pdf"><h2>Problem Statement: Bandwidth Experiences</h2></a>
+                    <a href="files/problem-statement.pdf"><h2>Problem Statement: Bandwidth Experiences</h2></a>
                     <p>
                         Users living in areas with lower-than-average bandwidth experience issues accessing larger files via the Internet, therefor making it difficult for them to access the news.
                     </p>
