--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
-Hello World!
-<Doctype html>
+<DOCTYPE html>
     <html>
         <head>
-            <title> CSCE 190: Abhinav Myadala</title>
+            <title>CSCE 190: Abhinav Myadala</title>
         </head>
         <body>
             <h1> Abhinav Myadala's CSCE 190 Site </h1>
