--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         </head>
         <body>
             <h1> Abhinav Myadala's CSCE 190 Site </h1>
-
+            <!--Problem Statement Assignment-->
             <section class="assignment">
                 <a href="files/problem-statement.pdf"><img src="images/problemstatement.png"></a>
                 <section class="ass-details">
@@ -14,6 +14,16 @@
                         Users living in areas with lower-than-average bandwidth experience issues accessing larger files via the Internet, therefor making it difficult for them to access the news.
                     </p>
                 </section>
+            </section>
+            <!--Affinity  Diagram Assignment-->
+            <section class="assignment">
+                    <a href="files/BandwidthExperiencesAffinityDiagram.pdf"><img src="images/affinitydiagram.png"></a>
+                    <section class="ass-details">
+                        <a href="files/BandwidthExperiencesAffinityDiagram.pdf"><h2>Affinity Diagram: Bandwidth Experiences</h2></a>
+                        <p>
+                            My group and I worked together to list all possible improvement we can do to help our users.
+                        </p>
+                    </section>
             </section>
         </body>
     </html>
