--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </section>
             <!--Affinity  Diagram Assignment-->
             <section class="assignment">
-                    <a href="files/BandwidthExperiencesAffinityDiagram.pdf"><img src="images/affinitydiagram.png"></a>
+                    <a href="files/BandwidthExperiencesAffinityDiagram.pdf"><img src="images/affinitydiagram.PNG"></a>
                     <section class="ass-details">
                         <a href="files/BandwidthExperiencesAffinityDiagram.pdf"><h2>Affinity Diagram: Bandwidth Experiences</h2></a>
                         <p>
