--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     <html>
         <head>
             <title>CSCE 190: Abhinav Myadala</title>
+            <Link rel="stylesheet" href="styles.css">
         </head>
         <body>
             <h1> Abhinav Myadala's CSCE 190 Site </h1>
