--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
                     </p>
                 </section>
             </section>
+
             <!--Affinity  Diagram Assignment-->
             <section class="assignment">
                     <a href="files/BandwidthExperiencesAffinityDiagram.pdf"><img src="images/affinitydiagram.PNG"></a>
@@ -26,5 +27,16 @@
                         </p>
                     </section>
             </section>
+
+            <!--Personna Assignment-->
+            <section class="assignment">
+                <a href="files/Personnas.pdf"><img src="images/Personnas.PNG"></a>
+                <section class="ass-details">
+                    <a href="files/Personnas.pdf"><h2>Personna: 4 Personna for Bandwidth Experiences App </h2></a>
+                    <p>
+                        4 personnas of a typical Bandwidth Experience app user.
+                    </p>
+                </section>
+        </section>
         </body>
     </html>
