--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                 <section class="ass-details">
                     <a href="files/problem-statement.pdf"><h2>Problem Statement: Bandwidth Experiences</h2></a>
                     <p>
-                        Users living in areas with lower-than-average bandwidth experience issues accessing larger files via the Internet, therefor making it difficult for them to access the news.
+                        Users living in areas with lower-than-average bandwidth experience issues accessing larger files via the Internet, therefore making it difficult for them to access the news.
                     </p>
                 </section>
             </section>
@@ -30,13 +30,22 @@
 
             <!--Personna Assignment-->
             <section class="assignment">
-                <a href="files/Personnas.pdf"><img src="images/Personnas.PNG"></a>
-                <section class="ass-details">
-                    <a href="files/Personnas.pdf"><h2>Personna: 4 Personna for Bandwidth Experiences App </h2></a>
-                    <p>
+                    <a href="files/Personnas.pdf"><img src="images/Personnas.PNG"></a>
+                    <section class="ass-details">
+                         <a href="files/Personnas.pdf"><h2>Personna: 4 Personna for Bandwidth Experiences App </h2></a>
+                         <p>
                         4 personnas of a typical Bandwidth Experience app user.
+                        </p>
+                    </section>
+            </section>
+            <!--StoryBoard Assignment-->
+            <section class="assignment">
+                <a href="files/Bandwidth Experience Storyboard.pdf"><img src="images/Storyboard.PNG"></a>
+                <section class="ass-details">
+                     <a href="files/Bandwidth Experience Storyboard.pdf"><h2>StoryBoard: 4 Comic Strips </h2></a>
+                     <p>
+                        A comic strip illustrating  4 different types of people who need Bandwidth Experience app .
                     </p>
                 </section>
-        </section>
         </body>
     </html>
