--- a/index.html
+++ b/index.html
@@ -47,5 +47,16 @@
                         A comic strip illustrating  4 different types of people who need Bandwidth Experience app .
                     </p>
                 </section>
+            </section>
+             <!--Sketching Assignment-->
+             <section class="assignment">
+                <a href="files/Bandwidth Experience Sketch.pdf"><img src="images/Bandwidth Experience Sketch.PNG"></a>
+                <section class="ass-details">
+                     <a href="files/Bandwidth Experience Sketch.pdf"><h2>Sketch: Bandwidth Experience App  </h2></a>
+                     <p>
+                        Multiple sketches of a potential app solution for Bandwidth Experience app.
+                    </p>
+                </section>
+            </section>
         </body>
     </html>
