--- a/index.html
+++ b/index.html
@@ -6,57 +6,73 @@
         </head>
         <body>
             <h1> Abhinav Myadala's CSCE 190 Site </h1>
-            <!--Problem Statement Assignment-->
-            <section class="assignment">
-                <a href="files/problem-statement.pdf"><img src="images/problemstatement.png"></a>
-                <section class="ass-details">
-                    <a href="files/problem-statement.pdf"><h2>Problem Statement: Bandwidth Experiences</h2></a>
-                    <p>
-                        Users living in areas with lower-than-average bandwidth experience issues accessing larger files via the Internet, therefore making it difficult for them to access the news.
-                    </p>
-                </section>
-            </section>
-
-            <!--Affinity  Diagram Assignment-->
-            <section class="assignment">
-                    <a href="files/BandwidthExperiencesAffinityDiagram.pdf"><img src="images/affinitydiagram.PNG"></a>
+            <div class ="assignments">
+                <!--Problem Statement Assignment-->
+                <section class="assignment">
+                    <a href="files/problem-statement.pdf"><img src="images/problemstatement.png"></a>
                     <section class="ass-details">
-                        <a href="files/BandwidthExperiencesAffinityDiagram.pdf"><h2>Affinity Diagram: Bandwidth Experiences</h2></a>
+                        <a href="files/problem-statement.pdf"><h2>Problem Statement: Bandwidth Experiences</h2></a>
                         <p>
-                            My group and I worked together to list all possible improvement we can do to help our users.
+                            Users living in areas with lower-than-average bandwidth experience issues accessing larger files via the Internet, therefore making it difficult for them to access the news.
                         </p>
                     </section>
-            </section>
+                </section>
 
-            <!--Personna Assignment-->
-            <section class="assignment">
-                    <a href="files/Personnas.pdf"><img src="images/Personnas.PNG"></a>
+                <!--Affinity  Diagram Assignment-->
+                <section class="assignment">
+                        <a href="files/BandwidthExperiencesAffinityDiagram.pdf"><img src="images/affinitydiagram.PNG"></a>
+                        <section class="ass-details">
+                            <a href="files/BandwidthExperiencesAffinityDiagram.pdf"><h2>Affinity Diagram: Bandwidth Experiences</h2></a>
+                            <p>
+                                My group and I worked together to list all possible improvement we can do to help our users.
+                            </p>
+                        </section>
+                </section>
+
+                <!--Personna Assignment-->
+                <section class="assignment">
+                        <a href="files/Personnas.pdf"><img src="images/Personnas.PNG"></a>
+                        <section class="ass-details">
+                            <a href="files/Personnas.pdf"><h2>Personna: 4 Personna for Bandwidth Experiences App </h2></a>
+                            <p>
+                            4 personnas of a typical Bandwidth Experience app user.
+                            </p>
+                        </section>
+                </section>
+
+                <!--StoryBoard Assignment-->
+                <section class="assignment">
+                    <a href="files/Bandwidth Experience Storyboard.pdf"><img src="images/Storyboard.PNG"></a>
                     <section class="ass-details">
-                         <a href="files/Personnas.pdf"><h2>Personna: 4 Personna for Bandwidth Experiences App </h2></a>
-                         <p>
-                        4 personnas of a typical Bandwidth Experience app user.
+                        <a href="files/Bandwidth Experience Storyboard.pdf"><h2>StoryBoard: 4 Comic Strips </h2></a>
+                        <p>
+                            A comic strip illustrating  4 different types of people who need Bandwidth Experience app .
                         </p>
                     </section>
-            </section>
-            <!--StoryBoard Assignment-->
-            <section class="assignment">
-                <a href="files/Bandwidth Experience Storyboard.pdf"><img src="images/Storyboard.PNG"></a>
-                <section class="ass-details">
-                     <a href="files/Bandwidth Experience Storyboard.pdf"><h2>StoryBoard: 4 Comic Strips </h2></a>
-                     <p>
-                        A comic strip illustrating  4 different types of people who need Bandwidth Experience app .
-                    </p>
                 </section>
-            </section>
-             <!--Sketching Assignment-->
-             <section class="assignment">
-                <a href="files/Bandwidth Experience Sketch.pdf"><img src="images/Bandwidth Experience Sketch.PNG"></a>
-                <section class="ass-details">
-                     <a href="files/Bandwidth Experience Sketch.pdf"><h2>Sketch: Bandwidth Experience App  </h2></a>
-                     <p>
-                        Multiple sketches of a potential app solution for Bandwidth Experience app.
-                    </p>
+
+                <!--Sketching Assignment-->
+                <section class="assignment">
+                    <a href="files/Bandwidth Experience Sketch.pdf"><img src="images/Bandwidth Experience Sketch.PNG"></a>
+                    <section class="ass-details">
+                        <a href="files/Bandwidth Experience Sketch.pdf"><h2>Sketch: Bandwidth Experience App  </h2></a>
+                        <p>
+                            Multiple sketches of a potential app solution for Bandwidth Experience app.
+                        </p>
+                    </section>
                 </section>
-            </section>
+
+                <!--Paper Prototype Assignment-->
+                <section class="assignment">
+                    <a href="https://youtu.be/Bywt5mW-jxI"><img src="images/Bandwidth Experience App prototype.PNG"></a>
+                    <section class="ass-details">
+                        <a href="https://youtu.be/Bywt5mW-jxI"><h2>Paper Prototype: Bandwidth Experience App  </h2></a>
+                        <p>
+                            A functional protoype on paper which we can use to ideate.
+                        </p>
+                    </section>
+                </section>
+
+            </div>
         </body>
     </html>
