--- a/index.html
+++ b/index.html
@@ -68,6 +68,14 @@
                             Conduct Usability Tests help identify problems in our desgin and they also help convey what the users like about our app.
                         </p>
                 </section>
+                 <!--Low-fi Prototype Assignment-->
+                 <section class="assignment">
+                    <a href="files/low-fi-prototype/index.html"><h2>Low-Fi-Prototype: Bandwidth Experience App  </h2></a>
+                    <a href="files/low-fi-prototype/index.html"><img src="images/LowFiPrototype.PNG"></a>
+                        <p>
+                            A low end prototype version of our app .
+                        </p>
+                </section>
 
             </div>
         </body>
