--- a/index.html
+++ b/index.html
@@ -76,6 +76,14 @@
                             A low end prototype version of our app .
                         </p>
                 </section>
+                <!--High-fi Prototype Assignment-->
+                <section class="assignment">
+                    <a href="files/high-fi-prototype/index.html"><h2>High-Fi-Prototype: Bandwidth Experience App  </h2></a>
+                    <a href="files/high-fi-prototype/index.html"><img src="images/HighFiPrototype.PNG"></a>
+                        <p>
+                            A high fidelity prototype version of our app .
+                        </p>
+                </section>
 
             </div>
         </body>
