--- a/index.html
+++ b/index.html
@@ -84,6 +84,14 @@
                             A high fidelity prototype version of our app .
                         </p>
                 </section>
+                 <!--High Fidelity Prototype Presentation Assignment-->
+                 <section class="assignment">
+                    <a href="https://youtu.be/NY_P_7jIoq0"><h2> High Fidelity Prototype Presentation: Bandwidth Experience App </h2></a>
+                    <a href="https://youtu.be/NY_P_7jIoq0"><img src="images/HighFiPrototype.PNG"></a>
+                        <p>
+                            A final  presentation of our BandWidth Experience App.
+                        </p>
+                </section>
 
             </div>
         </body>
